[package]
name = "fscx-rs"
description = "Copy files and directories recursively with progress."
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["filesystem", "files", "directory", "copy", "recursive"]
exclude = ["/tests"]

[dependencies]
anyhow = "1.0.79"
walkdir = "2.4.0"
